--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SECRET_KEY = '71484'
+SECRET_KEY = '00622'
 DEBUG=False 
-DATABASE_URL='postgres://postgres:kawasaki@localhost/awwards'
-DB_NAME='awwards'
+DATABASE_URL='postgres://postgres:kawasaki@localhost/awwwards'
+DB_NAME='awwwards'
 DB_USER='samuels'
 DB_PASSWORD='kawasaki'
 DB_HOST='127.0.0.1'
