--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SECRET_KEY = '00622'
+SECRET_KEY = '00624'
 DEBUG=False 
-DATABASE_URL='postgres://postgres:kawasaki@localhost/awwwards'
-DB_NAME='awwwards'
+DATABASE_URL='postgres://postgres:kawasaki@localhost/projects'
+DB_NAME='projects'
 DB_USER='samuels'
 DB_PASSWORD='kawasaki'
 DB_HOST='127.0.0.1'
