--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-SECRET_KEY = '00624'
-DEBUG=False 
-DATABASE_URL='postgres://postgres:kawasaki@localhost/projects'
-DB_NAME='projects'
-DB_USER='samuels'
-DB_PASSWORD='kawasaki'
-DB_HOST='127.0.0.1'
-MODE='dev' 
-ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
-DISABLE_COLLECTSTATIC=1
+# SECRET_KEY = '00624'
+# DEBUG=False 
+# DATABASE_URL='postgres://postgres:kawasaki@localhost/projects'
+# DB_NAME='projects'
+# DB_USER='samuels'
+# DB_PASSWORD='kawasaki'
+# DB_HOST='127.0.0.1'
+# MODE='dev' 
+# ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
+# DISABLE_COLLECTSTATIC=1
