--- a/.env
+++ b/.env
@@ -8,3 +8,16 @@
 # MODE='dev' 
 # ALLOWED_HOSTS='.localhost', '.herokuapp.com', '.127.0.0.1'
 # DISABLE_COLLECTSTATIC=1
+
+
+DB_NAME='awwards'
+DB_USER='weshy'
+DB_PASSWORD='weshy'
+SECRET_KEY='django-insecure-m+mwqfj!-gjht6e09cn2b08r3di5_=-#+a8v^x_#!zdl$=68m!'
+DEBUG=True
+
+# http://127.0.0.1:8000/auth/users/activation/
+# http://127.0.0.1:8000/auth/users/
+
+
+# shirleykariuki
