--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dj-database-url==0.5.0
 Django==4.0.5
 django-bootstrap3==21.2
 django-tinymce==3.4.0
+djangorestframework==3.13.1
 gunicorn==20.1.0
 jmespath==1.0.0
 Pillow==9.1.1
